smartsearch: put the search filters on the left so that on small screens it appears before the infinite list of results, fixes #72

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -3518,8 +3518,9 @@ select, input.text {
     cursor: pointer;
     color: #fff;
     }
-
-
+    @media (min-width: 770px) {
+      .margin-left-30-wide { margin-left: 30px; }
+    }
 
 
 /* Search members styles
